--- a/.gitignore
+++ b/.gitignore
@@ -2,15 +2,15 @@
 *.pyc
 
 # Setuptools distribution folder.
-/dist/
-/build/
-/.github/
+/dist
+/build
+/.github
 
 # Python egg metadata, regenerated from source files by setuptools.
 /*.egg-info
 /.dmypy.json
 
 /.idea
-/.virtualenv
+/.venv
 /__pycache__
 /dev
